--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,8 @@ services:
       - node
 
   firebase:
-    image: fireship/firebase-emulators
+    build: ./firebase
+    image: andreysenov/firebase-tools
     ports:
       - "4000:4000"   # Firebase Emulator Suite UI
       - "8080:8080"   # Firebase Hosting
