--- a/firebase/DockerFile
+++ b/firebase/DockerFile
@@ -1,4 +1,4 @@
 FROM node:18-alpine
 RUN npm install -g firebase-tools
-WORKDIR /app
+WORKDIR /home/node/firebase-project
 CMD ["firebase", "emulators:start"]
