--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+
 services:
   nginx:
     build:
@@ -12,15 +13,15 @@ services:
       - node
 
   firebase:
-    build: ./firebase  # Directory containing Dockerfile (case-sensitive)
-    image: rambabusaravanan/firebase  # Optional - only needed if you want to tag the built image
+    build: ./firebase
+    image: rambabusaravanan/firebase
     ports:
-      - "4000:4000"   # Firebase Emulator Suite UI
-      - "8080:8080"   # Firebase Hosting
-      - "5001:5001"   # Firebase Functions
-      - "9000:9000"   # Firebase Database
-      - "8085:8085"   # Firebase Auth
-      - "9199:9199"   # Firebase Storage
+      - "4000:4000"
+      - "8080:8080"
+      - "5001:5001"
+      - "9000:9000"
+      - "8085:8085"
+      - "9199:9199"
     environment:
       FIREBASE_PROJECT_ID: "farmx-1381c"
       FIREBASE_DATABASE_EMULATOR_HOST: "firebase:9000"
@@ -44,13 +45,17 @@ services:
     networks:
       - docker-app
     volumes: 
-      - ./:/app                # Mount current directory
-      - /app/node_modules      # Keep node_modules separate
-      - firebase-data:/app/firebase-data  # If node needs access to firebase data
+      - ./:/app
+      - /app/node_modules
+      - firebase-data:/app/firebase-data
     environment:
-    - NODE_ENV=development
+      - NODE_ENV=development
     working_dir: /app
     command: sh -c "pnpm install && pnpm run dev"
+
+networks:  # <-- This was missing!
+  docker-app:
+    driver: bridge
 
 volumes:
   firebase-data:
