--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   nginx:
     build:
@@ -12,7 +11,8 @@ services:
     depends_on: 
       - node
 
-  firebase:
+  db:
+    container_name: firebase
     build: ./firebase
     image: rambabusaravanan/firebase
     ports:
@@ -41,7 +41,7 @@ services:
     container_name: node_cont
     restart: always
     depends_on: 
-      - firebase
+      - db
     networks:
       - docker-app
     volumes: 
@@ -53,7 +53,7 @@ services:
     working_dir: /app
     command: sh -c "pnpm install && pnpm run dev"
 
-networks:  # <-- This was missing!
+networks: 
   docker-app:
     driver: bridge
 
