--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   nginx:
     build:
       context: ./nginx
+    image: nginx:1.27.5
     container_name: nginx
     ports:
       - "80:80"
@@ -10,7 +11,10 @@ services:
       - docker-app
     depends_on: 
       - node
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
 
+      
   firebase:
     build: ./firebase
     image: rambabusaravanan/firebase
