--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,8 +1,10 @@
 FROM nginx:1.27.5
-# Your custom configs here
 
-FROM gcr.io/distroless/nginx-debian11
-COPY --from=builder /etc/nginx /etc/nginx
-COPY --from=builder /usr/share/nginx/html /usr/share/nginx/html
-EXPOSE 8080
-ENTRYPOINT ["nginx", "-g", "daemon off;"]
+# Copy custom NGINX config
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Copy static files (if needed)
+COPY ./public /usr/share/nginx/html
+
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
